# mep3

./: .gitattributes  .gitignore  PR.md  README.md  configure-rpi.bash  install.bash  mep3.repos  sensor.py
mep3_behavior/: CMakeLists.txt  CPPLINT.cfg  README.md  package.xml
mep3_behavior/assets/skills/: big_retract_hands.xml  example.xml
mep3_behavior/assets/strategies/: mep3_tree_nodes.xml  strategy.xml  testing.xml
mep3_behavior/assets/tasks/: big_replica_and_statuette.xml  example_moving.xml
mep3_behavior/include/mep3_behavior/: add_obstacle_action.hpp  blackboard.hpp  blackboard_control_flow.hpp  bt_action_node.hpp  bt_topic_sub_node.hpp  camera_detection.hpp  canbus_send_action.hpp  delay_action.hpp  dynamixel_command_action.hpp  joint_position_command_action.hpp  motion_command_action.hpp  move_action.hpp  navigate_through_action.hpp  navigate_to_action.hpp  pose_2d.hpp  pump_action.hpp  (+11 more)
mep3_behavior/src/: mep3_behavior_tree.cpp
mep3_behavior/strategies/: banner.xml  big_blue.xml  big_homologation.xml  big_strategy.xml  big_strategy_a.xml  big_strategy_demo.xml  big_strategy_green.xml  big_strategy_green_a.xml  big_strategy_green_s.xml  big_strategy_s.xml  big_strategy_simple.xml  big_strategy_simple_a.xml  big_strategy_simple_green.xml  big_strategy_simple_green_a.xml  big_strategy_simple_green_s.xml  big_strategy_simple_s.xml  blue_new_a.xml  blue_new_base.xml  blue_new_base_a.xml  blue_new_base_d.xml  blue_new_base_u.xml  blue_new_d.xml  blue_new_s.xml  blue_new_ss.xml  blue_new_u.xml  blue_panel_simple.xml  blue_safe_offset_center.xml  blue_safe_proper_center.xml  blue_simple.xml  blue_simple_a.xml  blue_simple_m.xml  build_tribune.xml  common.xml  detection.xml  drop_fork_down.xml  duvanje.xml  effort_test.xml  error.xml  funny_blue.xml  funny_green.xml  (+73 more)
mep3_bringup/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
mep3_bringup/launch/: joystick_launch.py  robot_launch.py  rviz_launch.py  simulation_launch.py
mep3_bringup/mep3_bringup/: launch_utils.py
mep3_bringup/resource/: default.rviz  domain_bridge.yaml  joystick.yaml  map.pgm  map.xcf  map.yml  ros2_control_big.yaml  ros2_control_small.yaml
mep3_controllers/: CMakeLists.txt  joint_controller_plugin.xml  joint_position_controller_plugin.xml  package.xml  pump_controller_plugin.xml
mep3_controllers/src/: joint_controller.cpp  joint_position_controller.cpp  pump_controller.cpp
mep3_driver/: CMakeLists.txt  README.md  mep3_driver_ros2_control.xml  package.xml
mep3_driver/launch/: driver_launch.py
mep3_driver/mep3_driver/: .dynamixel_driver.py.swp  cinch_driver.py  dynamixel_driver.py  lcd_driver.py  lynx_driver.py  resistance_meter_driver.py  vacuum_pump_driver.py
mep3_driver/resource/: config_big.urdf  config_small.urdf  dynamixel_config_big.yaml  dynamixel_config_small.yaml  mep3_big_config.urdf  mep3_big_ros2_control.yaml
mep3_driver/src/: .socketcan_bridge.cpp.swp  dynamixel_driver.cpp  laser_inflator.cpp  motion_board_driver.cpp  robot_hardware_interface.cpp  socketcan_bridge.cpp
mep3_hardware/: CMakeLists.txt  README.md  dynamixel_hardware.xml  mep3_can_gpio_hardware_interface.xml  mep3_hardware_ros2_control.xml  mep3_motion_hardware_interface.xml  package.xml
mep3_hardware/launch/: hardware_launch.py
mep3_hardware/mep3_hardware/: box_driver.py  cinch_driver.py  ir_sensors.py  lcd_driver.py
mep3_hardware/resource/: big_controllers.yaml  big_description.urdf  big_motion_description.urdf  config_big.urdf  config_small.urdf  dynamixel_config_big.yaml  dynamixel_config_small.yaml  small_controllers.yaml  small_description.urdf
mep3_hardware/src/: dynamixel_driver.cpp  motion_board_driver.cpp  robot_hardware_interface.cpp  socketcan_bridge.cpp
mep3_localization/: package.xml  setup.cfg  setup.py
mep3_localization/assets/: calibration_camera.yaml
mep3_localization/config/: ekf.yaml
mep3_localization/launch/: localization_launch.py
mep3_localization/mep3_localization/: .gitignore  aruco_detector.py  flycheck_aruco_detector.py  pose_corrector.py  robot_detection.py  robot_detector.py  static_broadcaster.py
mep3_navigation/: CMakeLists.txt  README.md  dilation_layer.xml  mep3_regulated_pure_pursuit_controller.xml  move_behavior.xml  package.xml  stuck_behavior.xml  temporal_obstacle_layer.xml  unstuck_behavior.xml
mep3_navigation/behavior_trees/: navigate_w_recovery_and_replanning_only_if_path_becomes_invalid.xml
mep3_navigation/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py
mep3_navigation/maps/: eurobot_2022.yml
mep3_navigation/params/: config_regulator_big.yaml  config_regulator_small.yaml  laser_filters.yaml  nav2_params.yaml  nav2_params.yml  nav2_params_big.yaml  nav2_params_small.yaml  speckle_filter.yaml
mep3_navigation/resource/: blank.yml  default.rviz  eurobot_2022.pgm  eurobot_2022.yml
mep3_planning/: CMakeLists.txt  CPPLINT.cfg  package.xml
mep3_planning/src/: dummy_nodes.cpp  mep3_planning.cpp  navigate_to_action.cpp  navigate_to_pose.cpp  navigation.cpp
mep3_simulation/: CMakeLists.txt  README.md  mep3_webots_hardware_interface.xml  package.xml  setup.cfg  setup.py
mep3_simulation/launch/: .#simulation_launch.py  robot_launch.py  simulation_launch.py
mep3_simulation/mep3_simulation/: .#webots_dynamixel_driver.py  __init__.py  match_start_driver.py  resistance_meter_driver.py  scoreboard_lcd_driver.py  webots_binary_ranger_driver.py  webots_binary_sensor_driver.py  webots_cinch_driver.py  webots_dynamixel_driver.py  webots_lynxmotion_driver.py  webots_replica_driver.py  webots_statuette_driver.py  webots_vaccuum_pump_driver.py  webots_vacuum_pump_driver.py
mep3_simulation/resource/: big_controllers.yaml  big_description.urdf  config_big.urdf  config_cam.urdf  config_camera.urdf  config_small.urdf  default.rviz  map.yml  ros2_control_big.yaml  ros2_control_configuration.yml  ros2_control_small.yaml  small_controllers.yaml  small_description.urdf  webots_robot_description.urdf
mep3_simulation/src/: mep3_webots_hardware_interface.cpp
mep3_simulation/test/: test_flake8.py
(+660 files in other folders)
