<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mep3_behavior</name>
  <version>0.1.0</version>
  <description>Memristor Eurobot Platform Strategy Planner</description>
  <maintainer email="info@memristorrobotics.com">memristor</maintainer>
  <license>http://www.apache.org/licenses/LICENSE-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>navigation2</build_depend>
  <build_depend>nav2_bringup</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>nav2_behavior_tree</build_depend>
  <build_depend>nav2_bt_navigator</build_depend>
  <build_depend>nav2_planner</build_depend>
  <build_depend>nav2_recoveries</build_depend>
  <build_depend>can_msgs</build_depend>

  <test_depend>ament_cppcheck </test_depend>
  <test_depend>ament_cpplint</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_lint_cmake</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <depend>mep3_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
