<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mep3_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lukicdarkoo@gmail.com">lukic</maintainer>
  <license>TODO: License declaration</license>

  <depend>domain_bridge</depend>
  <depend>rmw_cyclonedds_cpp</depend>
  <depend>mep3_behavior</depend>
  <depend>mep3_controllers</depend>
  <depend>mep3_hardware</depend>
  <depend>mep3_msgs</depend>
  <depend>mep3_navigation</depend>
  <depend>mep3_localization</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
