<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mep3_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lukicdarkoo@gmail.com">lukic</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>ros2_control</depend>
  <depend>diff_drive_controller</depend>
  <depend>can_msgs</depend>
  <depend>hls_lfcd_lds_driver</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-can</depend>
  <depend>python3-gpiozero</depend>
  <depend>rplidar_ros</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>mep3_msgs</depend>
  <depend>nav2_util</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
