<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mep3_planning</name>
  <version>0.1.0</version>
  <description>Memristor Eurobot Platform Strategy Planner</description>
  <maintainer email="info@memristorrobotics.com">memristor</maintainer>
  <license>http://www.apache.org/licenses/LICENSE-2.0</license>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
