<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mep3_simulation</name>
  <version>0.1.0</version>
  <description>Memristor Eurobot Platform based on ROS 2</description>
  <maintainer email="info@memristorrobotics.com">memristor</maintainer>
  <license>http://www.apache.org/licenses/LICENSE-2.0</license>
  <depend>webots_ros2_driver</depend>
  <depend>webots_ros2_control</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
